@@ -26,6 +26,8 @@ Version 0.3.1 (under dev!)
 * irc: add missing CTCP: clientinfo, finger, source, time, userinfo (task #7270)
 * irc: improve error management on socket error (recv/send)
 * xfer: add missing charset decoding/encoding for IRC DCC chat (bug #27482)
+* gui: fix bug with URL selection in some terminals (caused by horizontal lines)
+  (bug #27700)
 * gui: use default auto completion for arguments of unknown commands
 * gui: fix alignment problem for buffer name when a merged buffer is closed
   (bug #27617)
